--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
+    "webpack-handlebars-precompiler": "^1.1.0",
     "webpack-merge": "^5.1.4",
     "webpackbar": "^4.0.0"
   },
